force-app/main/default/objects/PAF_Corp_Transfers__c/PAF_Corp_Transfers__c.object-meta.xml
<CustomObject>
    <label>PAF Corp Transfer</label>
    <nameField>
        <displayFormat>Transfers-{00000}</displayFormat>
        <label>PAF Corp Transfers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Corp Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>