force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Arrival_City__c.field-meta.xml
<CustomField>
    <fullName>Arrival_City__c</fullName>
    <label>Arrival City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>