force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Class_f_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_f_Service__c</fullName>
    <label>Class of Service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>