force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Ground_Transport_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transport_Booking_Number__c</fullName>
    <label>Ground Transport Booking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>