force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Ground_Transport_Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transport_Form_of_Payment__c</fullName>
    <label>Ground Transport Form of Payment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>