force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Ground_Transport_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transport_Pickup_Date__c</fullName>
    <label>Ground Transport Pickup Date</label>
    <type>Date</type>
</CustomField>