force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Transfers_Margin1__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Margin1__c</fullName>
    <formula>Transfers_Margin__c /  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfers Margin(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>