force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Transfers_Margin__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Margin__c</fullName>
    <formula>Total_Cost__c -  Ground_Transport_Nett__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfers Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>