force-app/main/default/objects/PAF_Corp_Transfers__c/fields/Travel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Travel_Bookings__c</fullName>
    <label>Travel Bookings</label>
    <referenceTo>PAF_Corp_Travel_Bookings__c</referenceTo>
    <relationshipLabel>PAF Corp Transfers</relationshipLabel>
    <relationshipName>PAF_Corp_Transfers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>